# OCG-Bullet-Physic-World-Editor-Test-Project

./: .gitignore  BUILD.md  LICENSE  PROJECT_SUMMARY.md  README.md
cross_platform_runner/: CMakeLists.txt  renderer.h
docs/: USER_GUIDE.md
examples/: basic_drop_test.pscene  complex_constraint_test.pscene
macos_cmake/: CMakeLists.txt  CMakeLists_macos.txt  CMakeLists_original.txt  README_MACOS_CMAKE.md  README_MACOS_NATIVE.md  build_linux_compat.sh  build_macos.sh  build_macos_native.sh
macos_cmake/include/: MacOSApplication.h  MacOSMainWindow.h
macos_cmake/include/physics/: ClothSimulation.h  TestSceneManager.h
macos_cmake/resources/: Info.plist.in
macos_cmake/src/: MacOSApplication.cpp  MacOSMainWindow.cpp  main.cpp
macos_cmake/src/physics/: ClothSimulation.cpp  TestSceneManager.cpp
mfc_editor/: MainFrm.h  MaterialView.h  OutputView.h  PhysicsSceneEditor.h  PropertyView.h  SceneTreeView.h  ViewportView.h  resource.h
qt_editor/: CMakeLists.txt  README_QT.md  build_qt.sh
qt_editor/include/: PropertyWidget.h  SceneTreeWidget.h
qt_editor/src/: main.cpp
scene_format/: physics_scene_format.cpp
tests/: integration_test.cpp  test_scene_format.cpp
xcode_project/: README_XCODE.md  build_xcode.sh
xcode_project/PhysicsSceneEditor/: Info.plist  PhysicsSceneEditor.entitlements
xcode_project/PhysicsSceneEditor.xcodeproj/: project.pbxproj
xcode_project/PhysicsSceneEditor.xcodeproj/xcshareddata/xcschemes/: PhysicsSceneEditor.xcscheme
xcode_project/PhysicsSceneEditor/Headers/: MainWindow.h  ViewportWidget.h  physics_engine.h  physics_scene_format.h  scene_loader.h
xcode_project/PhysicsSceneEditor/Sources/: main.cpp  physics_scene_format.cpp
